--- a/css/style.css
+++ b/css/style.css
@@ -74,24 +74,6 @@
     font-size: 1.3em;
 }
 
-.container__navbar__responsive {
-    position: absolute;
-    background-color: var(--color-7);
-    top: 75px;
-    width: 100%;
-    z-index: 100;
-}
-
-.navbar__responsive {
-    /* cambiar display  */
-    display: flex; 
-    flex-direction: column;
-    justify-content: center;
-    align-items: end;
-    height: 100vh;
-    gap: 15px;
-    padding-right: 30px;
-}
 
 /* navbar responsive - navbar desktop HOVER */
 
@@ -101,25 +83,85 @@
     transition: .5s;
 }
 
-.background__hero {
-    background-image: url(/img/fondoHero.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat:no-repeat ;
+/* SECTION HERO-SLIDER */
+
+    /* .background__hero {
+        background-image: url(/img/fondoHero.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat:no-repeat ;
+        height: 60vh;
+        transition: background-size .6s ease, height .6s ease;
+        text-align: center;
+    } */
+
+.container__slider {
+    width: 100vw;
+    margin: 100px auto;
+    overflow: hidden;
+    position: relative;
+}
+
+.slider {
+    width: 400%;
+    height: 400px;
+    display: flex;
+}
+
+.slider__section {
+width: 100%;
+}
+
+.slider__img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.slider__btn {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background-color: #bbb9af6e;
+    top: 50%;
+    color: var(--color-6);
+    font-size: 1.5em;
+    font-weight: bold;
+    border-radius: 50%;
+    display: grid;
+    place-content: center;
+}
+
+.slider__btn:hover {
+    background-color: #fff3;
+}
+
+.slider__btn-right {
+    right: 20px;
+}
+
+.slider__btn-left {
+    left: 20px;
+}
+
+.container-heroSlider {
+    position: relative;
+    top: -80px;
+}
+    
+.container__hero {
+    /* aca cambie */
     height: 60vh;
-    transition: background-size .6s ease, height .6s ease;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 0;
 }
 
 .hero {
     font-size: 1em;
     color: var(--color-7);
-}
-
-.container__hero {
-    height: 60vh;
-    display: flex;
-    align-items: center;
 }
 
 .btn__hero {
@@ -129,6 +171,8 @@
     width: 100%;
     border-radius: 20px;
 }
+
+/* SECTION SOBRE MI */
 
 .about__me {
     text-align: center;
