--- a/css/style.css
+++ b/css/style.css
@@ -96,9 +96,9 @@
     } */
 
 .container__slider {
-    width: 100vw;
+    width: 100%;
     margin: 100px auto;
-    overflow: hidden;
+    /* overflow: hidden; */
     position: relative;
 }
 
@@ -106,6 +106,7 @@
     width: 400%;
     height: 400px;
     display: flex;
+    margin-left: -100%;
 }
 
 .slider__section {
