--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@
 .container__slider {
     width: 100%;
     margin: 100px auto;
-    /* overflow: hidden; */
+    overflow: hidden;
     position: relative;
 }
 
@@ -118,6 +118,7 @@ width: 100%;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-color: #121212;
 }
 
 .slider__btn {
@@ -132,6 +133,7 @@ width: 100%;
     border-radius: 50%;
     display: grid;
     place-content: center;
+    cursor: pointer;
 }
 
 .slider__btn:hover {
