--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,48 @@
     font-family: var(--font-family-primary);
 }
 
-/* style a */
+.loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    background-color: var(--color-5);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.disppear {
+    animation: vanish 1s forwards;
+}
+
+.loader img {
+    width: 50px;
+}
+
+@keyframes vanish {
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+.ldld {
+    background-color: black;
+    width: 100vw;
+    height: 100vh;
+}
+.ldld img {
+    width: 20px;
+}
+
+.preloader img {
+    width: 80px;
+}
+
+/* style a */
 
 .navbar__responsive a, .container__navbar-desktop a, .container__icon a, .nav__footer-a {
     text-decoration: none;
