--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,12 @@ header {
     background-color: transparent;
     color: black;
     font-size: 1.3em;
+    display: flex;
 }
 
+.a__navbarI {
+    font-size: 17px;
+}
 
 /* navbar responsive - navbar desktop HOVER */
 
@@ -123,7 +127,6 @@ width: 100%;
 
 .container__hero {
     /* aca cambie */
-    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -219,6 +222,12 @@ width: 100%;
     color: var(--font-color);
 }
 
+.container__contact form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 /* FOOTER */
 
 footer {
@@ -300,7 +309,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     right: 10px;
     z-index: 200;
